syntax = "proto3";

package trendingmoviesservice;

option java_multiple_files = true;
option java_package = "trendingmoviesservice";
option java_outer_classname = "Trending";

service TrendingMoviesService {
  rpc GetTrendingMovies (TrendingMoviesRequest) returns (TrendingMoviesResponse);
}

message TrendingMoviesRequest {
  int32 limit = 1;
}

message Movie {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 rating = 4;
}

message TrendingMoviesResponse {
  repeated Movie movies = 1;
}